<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp">

    <TextView
        android:id="@+id/tvGreetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/chicago_blue"
        android:text="@string/tv_greetings"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCta"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="14dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvGreetings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/tvCtaTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/tv_title_cta"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tvCtaSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_subtitle_cta"
                android:textSize="16sp"
                android:textColor="@color/grey_inactive"
                android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@id/tvCtaTitle"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/ivCtaIllu"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/illu_home"
                android:contentDescription="@string/desc_girl_illustration"
                android:background="@android:color/transparent"
                android:adjustViewBounds="true"
                android:layout_marginStart="28dp"
                app:layout_constraintStart_toEndOf="@id/tvCtaTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <Button
                android:id="@+id/btnExamine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cta_examine"
                app:icon="@drawable/ic_examine"
                android:paddingHorizontal="16dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:backgroundTint="@color/chicago_blue"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCtaSubtitle"
                app:layout_constraintBottom_toBottomOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvRecentScans"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/tv_recent_scans"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/cvCta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvAllResults" />

    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/tvAllResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/chicago_blue"
        android:text="@string/tv_all_results"
        android:textStyle="normal"
        android:padding="0dp"
        android:layout_marginTop="24dp"
        tools:visibility="visible"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/cvCta"
        app:layout_constraintBottom_toBottomOf="@id/tvRecentScans"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvRecentScans"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="14dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        android:visibility="gone"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvRecentScans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp">

            <TextView
                android:id="@+id/tvRecentScansTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/tv_recentscans_title"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvScansResultSubtitle"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tvScansResultSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="4dp"
                android:maxLines="2"
                android:layout_marginTop="4dp"
                tools:text="Diagnosis:Non-Cancer\nConfidence Score: 100%"
                android:textColor="@color/grey_inactive"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/tvScansResultDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRecentScansTitle" />

            <TextView
                android:id="@+id/tvScansResultDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:alpha="0.6"
                android:text="@string/recent_scans_date"
                android:textColor="@color/grey_inactive"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvScansResultSubtitle" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivResultPhoto"
                android:layout_width="96dp"
                android:layout_height="108dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/recent_scans_photo"
                android:elevation="2dp"
                android:padding="4dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvHighlights"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/tv_highlights"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/cvRecentScans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvMoreArticles" />

    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/tvMoreArticles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/chicago_blue"
        android:text="@string/tv_more_articles"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/cvRecentScans"
        app:layout_constraintBottom_toBottomOf="@id/tvHighlights"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>