<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.examine.ResultActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_cream"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/baseline_close_24"
        app:navigationIconTint="@color/black"
        app:navigationContentDescription="@string/nav_desc"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/progressIndicator"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@android:color/transparent"
        android:src="@drawable/result_current_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar" />

    <ImageView
        android:id="@+id/imageProgress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:src="@drawable/image_progress_done"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/resultProgress" />

    <ImageView
        android:id="@+id/resultProgress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:src="@drawable/result_progress_done"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintStart_toEndOf="@id/imageProgress"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvImageProgressTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/image_progress_title"
        android:textColor="@color/chicago_blue"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/imageProgress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvResultProgressTitle" />

    <TextView
        android:id="@+id/tvResultProgressTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/result_progress_title"
        android:textColor="@color/chicago_blue"
        app:layout_constraintTop_toBottomOf="@id/resultProgress"
        app:layout_constraintStart_toEndOf="@id/tvImageProgressTitle"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        android:layout_margin="16dp"
        android:text="@string/result"
        app:layout_constraintTop_toBottomOf="@id/tvImageProgressTitle"
        app:layout_constraintBottom_toTopOf="@id/result_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/result_image"
        android:background="@android:color/transparent"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginVertical="16dp"
        android:padding="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_text"/>

    <TextView
        android:id="@+id/tv_result_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/grey_inactive"
        android:background="@android:color/transparent"
        tools:text="Diagnosis: Non-Cancer\nConfidence Score: 100%"
        app:layout_constraintTop_toBottomOf="@id/result_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnExamineAgain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:text="@string/examine_again"
        android:backgroundTint="@color/chicago_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>