<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingHorizontal="16dp"
    android:paddingVertical="4dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvRecentScans"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp">

            <TextView
                android:id="@+id/tvRecentScansTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/tv_recentscans_title"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvScansResultSubtitle"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tvScansResultSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="4dp"
                android:maxLines="2"
                android:layout_marginTop="4dp"
                tools:text="Diagnosis:Non-Cancer\nConfidence Score: 100%"
                android:textColor="@color/grey_inactive"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/tvScansResultDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRecentScansTitle" />

            <TextView
                android:id="@+id/tvScansResultDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:alpha="0.6"
                android:text="@string/recent_scans_date"
                android:textColor="@color/grey_inactive"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvScansResultSubtitle" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivResultPhoto"
                android:layout_width="96dp"
                android:layout_height="108dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/recent_scans_photo"
                android:elevation="2dp"
                android:padding="4dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>